--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
 <body>
   <h1>Welcome to Loharika's Portfolio</h1>
   <p>Step into a world of creativity, development, and innovation. Discover my work, my skills, and my passion.</p>
-  <button class="btn" onclick="location.href='index.html'">Get Started</button>
+  <button class="btn" onclick="location.href='main.html'">Get Started</button>
 </body>
 </html>
